Improving Threads functionalities